# stock_quantification

./: .gitignore  AGENT.md  README.md  pyproject.toml
artifacts/2026-03-06/: us_strategy_suite.json  us_strategy_suite.md
artifacts/2026-03-10/: cn_factor_backtest_7e99cccd17.json  cn_factor_backtest_7e99cccd17.md  cn_validation_study.json  cn_validation_study.md
artifacts/2026-03-13/: cn_full.json  cn_full.md  cn_full_backtest_5d.json  us_full.json  us_full_backtest_5d.md  us_validation_study.json  us_validation_study.md
docs/: admin_console_prototype_spec.md  admin_console_task_breakdown.md  current_gap_and_admin_console_design.md  framework_playbook.md  quant_api_detail_spec.md  quant_development_plan.md  quant_er_model.md  quant_framework_system_design.md  quant_implementation_spec.md  quant_requirements_design.md  strategy_map.md
scripts/: check_alpaca_paper.py  plot_march_2026_nav_curve.py  run_march_2026_backtest_rebalance.py  run_march_2026_paper_rebalance.py  run_single_strategy_backtest.py  run_strategy_suite.py  run_validation_study.py
static/: styles.css
stock_quantification/: __init__.py
templates/: dashboard.html
tests/: test_agents.py  test_analytics.py  test_artifacts.py  test_backtest.py  test_broker.py  test_integration_flow.py  test_local_paper.py  test_ops.py  test_pipeline.py  test_platform.py  test_real_data.py  test_reporting.py  test_research_data.py  test_research_diagnostics.py  test_runtime.py  test_runtime_behavior.py  test_sector_neutralization.py  test_strategy_catalog.py  test_validation.py  test_web.py
(+69 files in other folders)
