[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-quantification"
version = "0.1.0"
description = "Dual-market quant platform skeleton with deterministic execution boundaries and minimal multi-agent orchestration."
requires-python = ">=3.9"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
